Traducción de todas las páginas al inglés

--- a/html/correduria-seguros.html
+++ b/html/correduria-seguros.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description"
+    content="Realizamos una estimación de los posibles riesgos que podrían afectar a nuestros clientes, determinando los capitales necesarios para cubrirlos. Asegure su patrimonio con nuestra adecuada previsión contra siniestros y reciba asesoramiento para obtener una indemnización justa en caso de pérdida.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
