--- a/html/en/contacto.html
+++ b/html/en/contacto.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="The contact for Valls Administration.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
-  <title>Administraciones Valls | Contact</title>
+  <link rel="stylesheet" type="text/css" href="/static/css/contact.css">
+  <title>Valls Administration | Contact</title>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Logo de Administraciones Valls">
+        <img src="/static/img/valls_logo.png" alt="Valls Administration Logo">
       </div>
     </div>
     <div class="nav-btn">
@@ -28,7 +29,7 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="/en/">Home</a>
+      <a href="/en">Home</a>
       <a href="/en/administracion-fincas">Property Management</a>
       <a href="/en/gestion-alquileres">Rental Management</a>
       <a href="/en/departamento-juridico">Legal Department</a>
@@ -65,8 +66,33 @@
       </div>
     </div>
   </header>
-  <main>
+  <main class="contact">
     <h1>Contact</h1>
+    <section class="contact_content">
+      <div>
+        <h5 class="contact_subtitle">Phone</h5>
+        <p>+34 971 721 688</p>
+        <p>+34 651 843 166</p>
+        <p>+34 632 630 314</p>
+      </div>
+      <div>
+        <h5 class="contact_subtitle">Email</h5>
+        <p>info@administracionesvalls.com</p>
+      </div>
+      <div>
+        <h5 class="contact_subtitle">Schedule</h5>
+        <p>Monday, Wednesday y Friday 8 to 15 h</p>
+        <p>Tuesday and Thursday 8 to 20 h</p>
+        <p>Schedule for July and August: Monday to Friday 8 to 15 h</p>
+      </div>
+      <div>
+        <h5 class="contact_subtitle">Address</h5>
+        <p>Bisbe Perelló 3 Bajos, Palma de Mallorca</p>
+      </div>
+    </section>
+    <iframe class="contact_map"
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1828.5998769014125!2d2.6542462536577447!3d39.574798923798994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12979253f130e6ad%3A0x3081e36623a1b0e5!2sCarrer%20del%20Bisbe%20Perell%C3%B3%2C%203%2C%20Centre%2C%2007002%20Palma%2C%20Illes%20Balears!5e0!3m2!1ses!2ses!4v1703218676536!5m2!1ses!2ses"
+      style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </main>
 </body>
 <script>
