--- a/html/en/correduria-seguros.html
+++ b/html/en/correduria-seguros.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description"
+    content="We assess potential risks that could affect our clients, determining the necessary capital to cover them. Ensure your assets with our proper provision against losses and receive guidance to obtain a fair compensation in case of a loss.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
-  <title>Administraciones Valls | Insurance Brokerage</title>
+  <link rel="stylesheet" type="text/css" href="/static/css/info.css">
+  <title>Valls Administration | Insurance Brokerage</title>
 </head>
 
 <body>
@@ -17,7 +19,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Logo de Administraciones Valls">
+        <img src="/static/img/valls_logo.png" alt="Valls Administration Logo">
       </div>
     </div>
     <div class="nav-btn">
@@ -28,7 +30,7 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="/en/">Home</a>
+      <a href="/en">Home</a>
       <a href="/en/administracion-fincas">Property Management</a>
       <a href="/en/gestion-alquileres">Rental Management</a>
       <a href="/en/departamento-juridico">Legal Department</a>
@@ -65,8 +67,29 @@
       </div>
     </div>
   </header>
-  <main>
-    <h1>Insurance Brokerage</h1>
+  <main class="info">
+    <div class="info_content">
+      <h1>Insurance Brokerage</h1>
+      <section class="info_section">
+        <div class="info_text">
+          <p>
+            We conduct an assessment of potential risks that could affect our clients, determining the necessary capital
+            to cover them.
+          </p>
+          <p>
+            This is the best way to ensure proper provision against possible losses and prevent decreases in their
+            assets.
+          </p>
+          <p>
+            As a final step, in the event of a loss, we advise our clients to be compensated with a sufficient and
+            deserved indemnity for the damages suffered.
+          </p>
+        </div>
+        <figure class="info_figure">
+          <img src="/static/img/mallorca_3.jpg" alt="Property Management Image">
+        </figure>
+      </section>
+    </div>
   </main>
 </body>
 <script>
