--- a/html/en/departamento-juridico.html
+++ b/html/en/departamento-juridico.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description"
+    content="The legal support office provides advice and resolution of administrative legal procedures, specializing in leasing law and horizontal property. Committed to quality, ethics, and business solvency. Discover our comprehensive legal services.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
-  <title>Administraciones Valls | Legal Department</title>
+  <link rel="stylesheet" type="text/css" href="/static/css/info.css">
+  <title>Valls Administration | Legal Department</title>
 </head>
 
 <body>
@@ -17,7 +19,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Logo de Administraciones Valls">
+        <img src="/static/img/valls_logo.png" alt="Valls Administration Logo">
       </div>
     </div>
     <div class="nav-btn">
@@ -28,7 +30,7 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="/en/">Home</a>
+      <a href="/en">Home</a>
       <a href="/en/administracion-fincas">Property Management</a>
       <a href="/en/gestion-alquileres">Rental Management</a>
       <a href="/en/departamento-juridico">Legal Department</a>
@@ -65,8 +67,47 @@
       </div>
     </div>
   </header>
-  <main>
-    <h1>Legal Department</h1>
+  <main class="info">
+    <div class="info_content">
+      <h1>Legal Department</h1>
+      <section class="info_section">
+        <div class="info_text">
+          <p>
+            The legal support office aims to advise and resolve administrative legal procedures, as well as properly
+            address the appeals to which our clients are entitled.
+          </p>
+          <p>
+            Our legal services specialize in urban, rustic, and horizontal property leasing law. Our human team and our
+            unmistakable vocation allow us to offer comprehensive guidance.
+          </p>
+          <p>
+            This is a service with its own stamp, representing our commitment, above all, to quality, service to
+            individuals, ethics, and business solvency.
+          </p>
+        </div>
+        <figure class="info_figure">
+          <img src="/static/img/mallorca_3.jpg" alt="Property Management Image">
+        </figure>
+      </section>
+      <section>
+        <p>
+          Here is a list of some of our services:
+        </p>
+        <ul>
+          <li>General advice for companies and individuals.</li>
+          <li>Drafting and preparation of all types of contracts and their variants.</li>
+          <li>Real estate transactions, buying and selling, leases, exchange operations.</li>
+          <li>Legal actions before the Courts, claims for amounts.</li>
+          <li>Preparation of administrative files in which our client is an interested party.</li>
+          <li>Preparation or supervision of contractual, notarial documents as required in each case.</li>
+          <li>Assistance at the time of signing notarial documents.</li>
+          <li>Processing of notarial documents in the Property Registries of the Balearic Islands.</li>
+          <li>Registrations, cancellations, modifications, updates in the Land Registry.</li>
+          <li>Obtaining certifications from Public Administrations.</li>
+          <li>Obtaining certifications and simple notes from Mercantile and Property Registries.</li>
+        </ul>
+      </section>
+    </div>
   </main>
 </body>
 <script>
