--- a/html/en/gestion-alquileres.html
+++ b/html/en/gestion-alquileres.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description"
+    content="At Valls Rental Management, we provide comprehensive administration services for homes, commercial spaces, parking lots, buildings, hotels, and industrial warehouses. From personalized advice to property maintenance, trust us for the efficient management of your rented properties!">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
-  <title>Administraciones Valls | Rental Management</title>
+  <link rel="stylesheet" type="text/css" href="/static/css/info.css">
+  <title>Valls Administration | Rental Management</title>
 </head>
 
 <body>
@@ -17,7 +19,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Logo de Administraciones Valls">
+        <img src="/static/img/valls_logo.png" alt="Valls Administration Logo">
       </div>
     </div>
     <div class="nav-btn">
@@ -28,7 +30,7 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="/en/">Home</a>
+      <a href="/en">Home</a>
       <a href="/en/administracion-fincas">Property Management</a>
       <a href="/en/gestion-alquileres">Rental Management</a>
       <a href="/en/departamento-juridico">Legal Department</a>
@@ -65,8 +67,55 @@
       </div>
     </div>
   </header>
-  <main>
-    <h1>Rental Management</h1>
+  <main class="info">
+    <div class="info_content">
+      <h1>Rental Management</h1>
+      <section class="info_section">
+        <div class="info_text">
+          <p>
+            At Valls Rental Management, we offer you the possibility of obtaining administration services for all your
+            properties.
+          </p>
+          <p>
+            Homes / Commercial Spaces / Parking Lots / Buildings / Hotels / Industrial Warehouses.
+          </p>
+          <p>
+            This way, our company takes care of all the tasks related to the management and administration of your
+            properties rented to third parties.
+          </p>
+        </div>
+        <figure class="info_figure">
+          <img src="/static/img/mallorca_3.jpg" alt="Property Management Image">
+        </figure>
+      </section>
+      <section>
+        <p>
+          The tasks are detailed as follows:
+        </p>
+        <ul>
+          <li>Personalized advice to launch your property.</li>
+          <li>Property visit to create a profile, take photos, and videos.</li>
+          <li>Advertising and marketing management on leading market portals.</li>
+          <li>Tenant selection and property visits.</li>
+          <li>Preparation of lease/purchase option contract.</li>
+          <li>Deposits / Extraordinary deposits.</li>
+          <li>Receipt collection.</li>
+          <li>Monthly settlement to the landlord.</li>
+          <li>Management of common expenses/Property tax (IBI)/Waste disposal/supplies, etc.</li>
+          <li>IPC increase/updates.</li>
+          <li>Preparation of VAT and annual summaries.</li>
+          <li>Certificates for tax purposes.</li>
+          <li>Property maintenance, control of necessary works, breakdown and emergency service 24/7.</li>
+          <li>Contracting property insurance and follow-up in case of a claim.</li>
+          <li>Contracting of supplies.</li>
+          <li>Energy Efficiency Certificate.</li>
+          <li>Legal advice.</li>
+          <li>Eviction for non-payment and Collection of Amounts.</li>
+          <li>Contracting Guaranteed Rent Insurance.</li>
+          <li>We only receive our fees if the property generates income. If you don't profit, neither do we.</li>
+        </ul>
+      </section>
+    </div>
   </main>
 </body>
 <script>
