--- a/html/en/index.html
+++ b/html/en/index.html
@@ -30,7 +30,7 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="/en/">Home</a>
+      <a href="/en">Home</a>
       <a href="/en/administracion-fincas">Property Management</a>
       <a href="/en/gestion-alquileres">Rental Management</a>
       <a href="/en/departamento-juridico">Legal Department</a>
