--- a/html/administracion-fincas.html
+++ b/html/administracion-fincas.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description"
+    content="Desde 1963, nos especializamos en la gestión y administración de fincas, comunidades e inmuebles. Confíe en nuestra profesionalidad y seriedad para el perfecto funcionamiento y mantenimiento de su propiedad.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
