--- a/html/departamento-juridico.html
+++ b/html/departamento-juridico.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description"
+    content="La oficina de apoyo jurídico ofrece asesoramiento y resolución de procedimientos jurídicos administrativos, especializados en ley de arrendamiento y propiedad horizontal. Comprometidos con la calidad, ética y solvencia empresarial. Descubra nuestros servicios legales integrales.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
