--- a/html/en/administracion-fincas.html
+++ b/html/en/administracion-fincas.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description"
+    content="Since 1963, we specialize in the management and administration of estates, communities, and properties. Trust in our professionalism and reliability for the perfect functioning and maintenance of your property.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/info.css">
-  <title>Administraciones Valls | Property Management</title>
+  <title>Valls Administration | Property Management</title>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Logo de Administraciones Valls">
+        <img src="/static/img/valls_logo.png" alt="Valls Administration Logo">
       </div>
     </div>
     <div class="nav-btn">
@@ -29,7 +30,7 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="/en/">Home</a>
+      <a href="/en">Home</a>
       <a href="/en/administracion-fincas">Property Management</a>
       <a href="/en/gestion-alquileres">Rental Management</a>
       <a href="/en/departamento-juridico">Legal Department</a>
