--- a/html/gestion-alquileres.html
+++ b/html/gestion-alquileres.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description"
+    content="En Valls Gestión de Alquileres, ofrecemos servicios integrales de administración para viviendas, locales, aparcamientos, edificios, hoteles y naves industriales. Desde asesoramiento personalizado hasta mantenimiento del inmueble, ¡confíe en nosotros para la gestión eficiente de sus propiedades alquiladas!">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
