--- a/html/correduria-seguros.html
+++ b/html/correduria-seguros.html
@@ -39,28 +39,50 @@
       <div class="select-box">
         <div class="select-box__current" tabindex="1">
           <div class="select-box__value">
-            <input class="select-box__input" type="radio" id="0" value="1" name="lang" checked />
+            <input class="select-box__input" type="radio" id="es" value="es" name="lang" />
             <p class="select-box__input-text">
               <img class="select-img" src="/static/img/es.svg" alt="Spanish" />
             </p>
           </div>
           <div class="select-box__value">
-            <input class="select-box__input" type="radio" id="1" value="2" name="lang" />
+            <input class="select-box__input" type="radio" id="en" value="en" name="lang" />
             <p class="select-box__input-text">
               <img class="select-img" src="/static/img/gb.svg" alt="English" />
+            </p>
+          </div>
+          <div class="select-box__value">
+            <input class="select-box__input" type="radio" id="de" value="de" name="lang" />
+            <p class="select-box__input-text">
+              <img class="select-img" src="/static/img/de.svg" alt="German" />
+            </p>
+          </div>
+          <div class="select-box__value">
+            <input class="select-box__input" type="radio" id="fr" value="fr" name="lang" />
+            <p class="select-box__input-text">
+              <img class="select-img" src="/static/img/fr.svg" alt="French" />
             </p>
           </div>
           <img class="select-box__icon" src="/static/img/chevron_down.svg" alt="Arrow Icon" aria-hidden="true" />
         </div>
         <ul class="select-box__list">
           <li>
-            <label id="input-lang-es" class="select-box__option" for="0" aria-hidden="aria-hidden">
+            <label class="select-box__option" for="es" aria-hidden="aria-hidden">
               <img class="select-img" src="/static/img/es.svg" alt="Spanish" />
             </label>
           </li>
           <li>
-            <label id="input-lang-en" class="select-box__option" for="1" aria-hidden="aria-hidden">
+            <label class="select-box__option" for="en" aria-hidden="aria-hidden">
               <img class="select-img" src="/static/img/gb.svg" alt="English" />
+            </label>
+          </li>
+          <li>
+            <label class="select-box__option" for="de" aria-hidden="aria-hidden">
+              <img class="select-img" src="/static/img/de.svg" alt="German" />
+            </label>
+          </li>
+          <li>
+            <label class="select-box__option" for="fr" aria-hidden="aria-hidden">
+              <img class="select-img" src="/static/img/fr.svg" alt="French" />
             </label>
           </li>
         </ul>
@@ -92,11 +114,6 @@
     </div>
   </main>
 </body>
-<script>
-  const lang = document.getElementById('input-lang-en')
-  lang.addEventListener('click', () => {
-    window.location.assign('/en/correduria-seguros')
-  })
-</script>
+<script src="/static/js/lang.js"></script>
 
 </html>
