Actualización de las imágenes

--- a/html/en/departamento-juridico.html
+++ b/html/en/departamento-juridico.html
@@ -108,7 +108,7 @@
           </p>
         </div>
         <figure class="info_figure">
-          <img src="/static/img/mallorca_3.jpg" alt="Property Management Image">
+          <img src="/static/img/ase_jur.jpg" alt="Property Management Image">
         </figure>
       </section>
       <section>
