--- a/html/en/index.html
+++ b/html/en/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Leading company with over 60 years of experience in the comprehensive management of estates, communities, and properties. We guarantee efficient and sustainable operation, standing out for our professionalism and seriousness. We continually improve service quality, ensuring deadlines, budgets, and owner satisfaction. We provide clear and updated information on the economic status and operation of each property. Optimize your investment with us, where excellence and legality converge.">
+    content="Leading company in Mallorca with over 60 years of experience in the comprehensive management of estates, communities, and properties. We guarantee efficient and sustainable operation, standing out for our professionalism and seriousness. We continually improve service quality, ensuring deadlines, budgets, and owner satisfaction. We provide clear and updated information on the economic status and operation of each property. Optimize your investment with us, where excellence and legality converge.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
