--- a/html/gestion-alquileres.html
+++ b/html/gestion-alquileres.html
@@ -107,7 +107,7 @@
           </p>
         </div>
         <figure class="info_figure">
-          <img src="/static/img/mallorca_3.jpg" alt="Imagen de Administración de Fincas">
+          <img src="/static/img/rental.jpg" alt="Imagen de Administración de Fincas">
         </figure>
       </section>
       <section>
