--- a/html/administracion-fincas.html
+++ b/html/administracion-fincas.html
@@ -111,7 +111,7 @@
           </p>
         </div>
         <figure class="info_figure">
-          <img src="/static/img/mallorca_3.jpg" alt="Imagen de Administración de Fincas">
+          <img src="/static/img/finc_adm.jpg" alt="Imagen de Administración de Fincas">
         </figure>
       </section>
       <section>
