--- a/html/correduria-seguros.html
+++ b/html/correduria-seguros.html
@@ -108,7 +108,7 @@
           </p>
         </div>
         <figure class="info_figure">
-          <img src="/static/img/mallorca_3.jpg" alt="Imagen de Administración de Fincas">
+          <img src="/static/img/insurance.jpg" alt="Imagen de Administración de Fincas">
         </figure>
       </section>
     </div>
