--- a/html/departamento-juridico.html
+++ b/html/departamento-juridico.html
@@ -110,7 +110,7 @@
           </p>
         </div>
         <figure class="info_figure">
-          <img src="/static/img/mallorca_3.jpg" alt="Imagen de Administración de Fincas">
+          <img src="/static/img/ase_jur.jpg" alt="Imagen de Administración de Fincas">
         </figure>
       </section>
       <section>
