--- a/html/en/administracion-fincas.html
+++ b/html/en/administracion-fincas.html
@@ -109,7 +109,7 @@
           </p>
         </div>
         <figure class="info_figure">
-          <img src="/static/img/mallorca_3.jpg" alt="Property Management Image">
+          <img src="/static/img/finc_adm.jpg" alt="Property Management Image">
         </figure>
       </section>
       <section>
