--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Empresa líder con más de 60 años de experiencia en la gestión integral de fincas, comunidades e inmuebles. Garantizamos un funcionamiento eficiente y sostenible, destacando por nuestra profesionalidad y seriedad. Mejoramos constantemente la calidad de los servicios, asegurando plazos, presupuestos y la satisfacción de los propietarios. Proporcionamos información clara y actualizada sobre el estado económico y el funcionamiento de cada propiedad. Optimize su inversión con nosotros, donde la excelencia y la legalidad se encuentran.">
+    content="Empresa líder en Mallorca con más de 60 años de experiencia en la gestión integral de fincas, comunidades e inmuebles. Garantizamos un funcionamiento eficiente y sostenible, destacando por nuestra profesionalidad y seriedad. Mejoramos constantemente la calidad de los servicios, asegurando plazos, presupuestos y la satisfacción de los propietarios. Proporcionamos información clara y actualizada sobre el estado económico y el funcionamiento de cada propiedad. Optimize su inversión con nosotros, donde la excelencia y la legalidad se encuentran.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
