Se traduce la web al alemán y al francés

--- a/html/de/contacto.html
+++ b/html/de/contacto.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="de">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Contacto de Administraciones Valls.">
+  <meta name="description" content="Der Kontakt für Administraciones Valls.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/contact.css">
-  <title>Administraciones Valls | Contacto</title>
+  <title>Valls Verwaltung | Kontakt</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Logo de Administraciones Valls">
+        <img src="/static/img/valls_logo.png" alt="Valls Administration Logo">
       </div>
     </div>
     <div class="nav-btn">
@@ -29,59 +29,59 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="/">Inicio</a>
-      <a href="/administracion-fincas">Administración de Fincas</a>
-      <a href="/gestion-alquileres">Gestión de Alquileres</a>
-      <a href="/departamento-juridico">Departamento Jurídico</a>
-      <a href="/correduria-seguros">Correduría de Seguros</a>
-      <a href="/contacto">Contacto</a>
+      <a href="/de">Startseite</a>
+      <a href="/de/administracion-fincas">Immobilienverwaltung</a>
+      <a href="/de/gestion-alquileres">Vermietungsmanagement</a>
+      <a href="/de/departamento-juridico">Rechtsabteilung</a>
+      <a href="/de/correduria-seguros">Versicherungsmakler</a>
+      <a href="/de/contacto">Kontakt</a>
       <div class="select-box">
         <div class="select-box__current" tabindex="1">
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="es" value="es" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/es.svg" alt="Spanish" />
+              <img class="select-img" src="/static/img/es.svg" alt="Spanisch" />
             </p>
           </div>
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="en" value="en" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/gb.svg" alt="English" />
+              <img class="select-img" src="/static/img/gb.svg" alt="Englisch" />
             </p>
           </div>
           <div class="select-box__value">
-            <input class="select-box__input" type="radio" id="de" value="de" name="lang" />
+            <input class="select-box__input" type="radio" id="de" value="de" name="lang" checked />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/de.svg" alt="German" />
+              <img class="select-img" src="/static/img/de.svg" alt="Deutsch" />
             </p>
           </div>
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="fr" value="fr" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/fr.svg" alt="French" />
+              <img class="select-img" src="/static/img/fr.svg" alt="Französisch" />
             </p>
           </div>
-          <img class="select-box__icon" src="/static/img/chevron_down.svg" alt="Arrow Icon" aria-hidden="true" />
+          <img class="select-box__icon" src="/static/img/chevron_down.svg" alt="Pfeil-Symbol" aria-hidden="true" />
         </div>
         <ul class="select-box__list">
           <li>
             <label class="select-box__option" for="es" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/es.svg" alt="Spanish" />
+              <img class="select-img" src="/static/img/es.svg" alt="Spanisch" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="en" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/gb.svg" alt="English" />
+              <img class="select-img" src="/static/img/gb.svg" alt="Englisch" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="de" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/de.svg" alt="German" />
+              <img class="select-img" src="/static/img/de.svg" alt="Deutsch" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="fr" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/fr.svg" alt="French" />
+              <img class="select-img" src="/static/img/fr.svg" alt="Französisch" />
             </label>
           </li>
         </ul>
@@ -89,27 +89,27 @@
     </div>
   </header>
   <main class="contact">
-    <h1>Contacto</h1>
+    <h1>Kontakt</h1>
     <section class="contact_content">
       <div>
-        <h5 class="contact_subtitle">Teléfono</h5>
-        <p>971 721 688</p>
-        <p>651 843 166</p>
-        <p>632 630 314</p>
+        <h5 class="contact_subtitle">Telefon</h5>
+        <p>+34 971 721 688</p>
+        <p>+34 651 843 166</p>
+        <p>+34 632 630 314</p>
       </div>
       <div>
-        <h5 class="contact_subtitle">Email</h5>
+        <h5 class="contact_subtitle">E-Mail</h5>
         <p>info@administracionesvalls.com</p>
       </div>
       <div>
-        <h5 class="contact_subtitle">Horario</h5>
-        <p>Lunes, Miercoles y Viernes de 8 a 15 h</p>
-        <p>Martes y Jueves de 8 a 20 h ininterrumpidamente.</p>
-        <p>Horario Julio y Agosto:<br /> De Lunes a Viernes de 8 a 15 h.</p>
+        <h5 class="contact_subtitle">Öffnungszeiten</h5>
+        <p>Montag, Mittwoch und Freitag von 8 bis 15 Uhr</p>
+        <p>Dienstag und Donnerstag von 8 bis 20 Uhr</p>
+        <p>Öffnungszeiten im Juli und August: <br /> Montag bis Freitag von 8 bis 15 Uhr</p>
       </div>
       <div>
-        <h5 class="contact_subtitle">Dirección</h5>
-        <p>Bisbe Perelló 3 Bajos, Palma de Mallorca</p>
+        <h5 class="contact_subtitle">Adresse</h5>
+        <p>Bisbe Perelló 3, Erdgeschoss, Palma de Mallorca</p>
       </div>
     </section>
     <iframe class="contact_map"
