--- a/html/en/contacto.html
+++ b/html/en/contacto.html
@@ -105,7 +105,7 @@
         <h5 class="contact_subtitle">Schedule</h5>
         <p>Monday, Wednesday y Friday 8 to 15 h</p>
         <p>Tuesday and Thursday 8 to 20 h</p>
-        <p>Schedule for July and August: Monday to Friday 8 to 15 h</p>
+        <p>Schedule for July and August:<br /> Monday to Friday 8 to 15 h</p>
       </div>
       <div>
         <h5 class="contact_subtitle">Address</h5>
