--- a/html/fr/contacto.html
+++ b/html/fr/contacto.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Contacto de Administraciones Valls.">
+  <meta name="description" content="Le contact pour l'Administration Valls.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/contact.css">
-  <title>Administraciones Valls | Contacto</title>
+  <title>Administration Valls | Contact</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Logo de Administraciones Valls">
+        <img src="/static/img/valls_logo.png" alt="Logo de l'Administration Valls">
       </div>
     </div>
     <div class="nav-btn">
@@ -29,59 +29,59 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="/">Inicio</a>
-      <a href="/administracion-fincas">Administración de Fincas</a>
-      <a href="/gestion-alquileres">Gestión de Alquileres</a>
-      <a href="/departamento-juridico">Departamento Jurídico</a>
-      <a href="/correduria-seguros">Correduría de Seguros</a>
-      <a href="/contacto">Contacto</a>
+      <a href="/fr">Accueil</a>
+      <a href="/fr/administracion-fincas">Gestion de Propriété</a>
+      <a href="/fr/gestion-alquileres">Gestion Locative</a>
+      <a href="/fr/departamento-juridico">Département Juridique</a>
+      <a href="/fr/correduria-seguros">Courtage en Assurances</a>
+      <a href="/fr/contacto">Contact</a>
       <div class="select-box">
         <div class="select-box__current" tabindex="1">
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="es" value="es" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/es.svg" alt="Spanish" />
+              <img class="select-img" src="/static/img/es.svg" alt="Espagnol" />
             </p>
           </div>
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="en" value="en" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/gb.svg" alt="English" />
+              <img class="select-img" src="/static/img/gb.svg" alt="Anglais" />
             </p>
           </div>
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="de" value="de" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/de.svg" alt="German" />
+              <img class="select-img" src="/static/img/de.svg" alt="Allemand" />
             </p>
           </div>
           <div class="select-box__value">
-            <input class="select-box__input" type="radio" id="fr" value="fr" name="lang" />
+            <input class="select-box__input" type="radio" id="fr" value="fr" name="lang" checked />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/fr.svg" alt="French" />
+              <img class="select-img" src="/static/img/fr.svg" alt="Français" />
             </p>
           </div>
-          <img class="select-box__icon" src="/static/img/chevron_down.svg" alt="Arrow Icon" aria-hidden="true" />
+          <img class="select-box__icon" src="/static/img/chevron_down.svg" alt="Icône de flèche" aria-hidden="true" />
         </div>
         <ul class="select-box__list">
           <li>
             <label class="select-box__option" for="es" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/es.svg" alt="Spanish" />
+              <img class="select-img" src="/static/img/es.svg" alt="Espagnol" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="en" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/gb.svg" alt="English" />
+              <img class="select-img" src="/static/img/gb.svg" alt="Anglais" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="de" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/de.svg" alt="German" />
+              <img class="select-img" src="/static/img/de.svg" alt="Allemand" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="fr" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/fr.svg" alt="French" />
+              <img class="select-img" src="/static/img/fr.svg" alt="Français" />
             </label>
           </li>
         </ul>
@@ -89,26 +89,26 @@
     </div>
   </header>
   <main class="contact">
-    <h1>Contacto</h1>
+    <h1>Contact</h1>
     <section class="contact_content">
       <div>
-        <h5 class="contact_subtitle">Teléfono</h5>
-        <p>971 721 688</p>
-        <p>651 843 166</p>
-        <p>632 630 314</p>
+        <h5 class="contact_subtitle">Téléphone</h5>
+        <p>+34 971 721 688</p>
+        <p>+34 651 843 166</p>
+        <p>+34 632 630 314</p>
       </div>
       <div>
-        <h5 class="contact_subtitle">Email</h5>
+        <h5 class="contact_subtitle">E-mail</h5>
         <p>info@administracionesvalls.com</p>
       </div>
       <div>
-        <h5 class="contact_subtitle">Horario</h5>
-        <p>Lunes, Miercoles y Viernes de 8 a 15 h</p>
-        <p>Martes y Jueves de 8 a 20 h ininterrumpidamente.</p>
-        <p>Horario Julio y Agosto:<br /> De Lunes a Viernes de 8 a 15 h.</p>
+        <h5 class="contact_subtitle">Horaires</h5>
+        <p>Lundi, mercredi et vendredi de 8h à 15h</p>
+        <p>Mardi et jeudi de 8h à 20h</p>
+        <p>Horaires pour juillet et août :<br /> Du lundi au vendredi de 8h à 15h</p>
       </div>
       <div>
-        <h5 class="contact_subtitle">Dirección</h5>
+        <h5 class="contact_subtitle">Adresse</h5>
         <p>Bisbe Perelló 3 Bajos, Palma de Mallorca</p>
       </div>
     </section>
