--- a/html/de/index.html
+++ b/html/de/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Leading company in Mallorca with over 60 years of experience in the comprehensive management of estates, communities, and properties. We guarantee efficient and sustainable operation, standing out for our professionalism and seriousness. We continually improve service quality, ensuring deadlines, budgets, and owner satisfaction. We provide clear and updated information on the economic status and operation of each property. Optimize your investment with us, where excellence and legality converge.">
+    content="Führendes Unternehmen auf Mallorca mit über 60 Jahren Erfahrung in der umfassenden Verwaltung von Anwesen, Gemeinschaften und Immobilien. Wir garantieren einen effizienten und nachhaltigen Betrieb und zeichnen uns durch Professionalität und Ernsthaftigkeit aus. Wir verbessern kontinuierlich die Servicequalität, gewährleisten Termine, Budgets und die Zufriedenheit der Eigentümer. Wir stellen klare und aktualisierte Informationen zum wirtschaftlichen Status und Betrieb jeder Immobilie zur Verfügung. Optimieren Sie Ihre Investition mit uns, wo Exzellenz und Legalität zusammentreffen.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/home.css">
-  <title>Valls Administration | Home</title>
+  <title>Valls Verwaltung | Startseite</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Valls Administration Logo">
+        <img src="/static/img/valls_logo.png" alt="Valls Verwaltung Logo">
       </div>
     </div>
     <div class="nav-btn">
@@ -30,59 +30,59 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="/en">Home</a>
-      <a href="/en/administracion-fincas">Property Management</a>
-      <a href="/en/gestion-alquileres">Rental Management</a>
-      <a href="/en/departamento-juridico">Legal Department</a>
-      <a href="/en/correduria-seguros">Insurance Brokerage</a>
-      <a href="/en/contacto">Contact</a>
+      <a href="/de">Startseite</a>
+      <a href="/de/administracion-fincas">Immobilienverwaltung</a>
+      <a href="/de/gestion-alquileres">Vermietungsmanagement</a>
+      <a href="/de/departamento-juridico">Rechtsabteilung</a>
+      <a href="/de/correduria-seguros">Versicherungsmakler</a>
+      <a href="/de/contacto">Kontakt</a>
       <div class="select-box">
         <div class="select-box__current" tabindex="1">
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="es" value="es" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/es.svg" alt="Spanish" />
+              <img class="select-img" src="/static/img/es.svg" alt="Spanisch" />
             </p>
           </div>
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="en" value="en" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/gb.svg" alt="English" />
+              <img class="select-img" src="/static/img/gb.svg" alt="Englisch" />
             </p>
           </div>
           <div class="select-box__value">
-            <input class="select-box__input" type="radio" id="de" value="de" name="lang" />
+            <input class="select-box__input" type="radio" id="de" value="de" name="lang" checked />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/de.svg" alt="German" />
+              <img class="select-img" src="/static/img/de.svg" alt="Deutsch" />
             </p>
           </div>
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="fr" value="fr" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/fr.svg" alt="French" />
+              <img class="select-img" src="/static/img/fr.svg" alt="Französisch" />
             </p>
           </div>
-          <img class="select-box__icon" src="/static/img/chevron_down.svg" alt="Arrow Icon" aria-hidden="true" />
+          <img class="select-box__icon" src="/static/img/chevron_down.svg" alt="Pfeil-Icon" aria-hidden="true" />
         </div>
         <ul class="select-box__list">
           <li>
             <label class="select-box__option" for="es" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/es.svg" alt="Spanish" />
+              <img class="select-img" src="/static/img/es.svg" alt="Spanisch" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="en" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/gb.svg" alt="English" />
+              <img class="select-img" src="/static/img/gb.svg" alt="Englisch" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="de" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/de.svg" alt="German" />
+              <img class="select-img" src="/static/img/de.svg" alt="Deutsch" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="fr" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/fr.svg" alt="French" />
+              <img class="select-img" src="/static/img/fr.svg" alt="Französisch" />
             </label>
           </li>
         </ul>
@@ -92,10 +92,10 @@
   <main>
     <div class="main_container">
       <div class="main_text">
-        <h1>Valls Administration</h1>
+        <h1>Valls Verwaltung</h1>
         <div class="main_text_button"">
-          <a class=" button" target="_blank" href="https://www.idealista.com/en/pro/valls-inmobiliaria">FIND YOUR
-          HOME</a>
+          <a class=" button" target="_blank" href="https://www.idealista.com/de/pro/valls-inmobiliaria">FINDE DEIN
+          ZUHAUSE</a>
         </div>
       </div>
     </div>
