--- a/html/fr/index.html
+++ b/html/fr/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Leading company in Mallorca with over 60 years of experience in the comprehensive management of estates, communities, and properties. We guarantee efficient and sustainable operation, standing out for our professionalism and seriousness. We continually improve service quality, ensuring deadlines, budgets, and owner satisfaction. We provide clear and updated information on the economic status and operation of each property. Optimize your investment with us, where excellence and legality converge.">
+    content="Entreprise leader à Majorque avec plus de 60 ans d'expérience dans la gestion complète de domaines, copropriétés et propriétés. Nous garantissons un fonctionnement efficace et durable, mettant en avant notre professionnalisme et notre sérieux. Nous améliorons constamment la qualité des services, en assurant le respect des délais, des budgets et la satisfaction des propriétaires. Nous fournissons des informations claires et à jour sur la situation économique et le fonctionnement de chaque propriété. Optimisez votre investissement avec nous, où l'excellence et la légalité se rejoignent.">
   <link rel="icon" type="image/png" href="/static/img/valls_logo_icon.png">
   <link rel="stylesheet" type="text/css" href="/static/css/index.css">
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/home.css">
-  <title>Valls Administration | Home</title>
+  <title>Administration Valls | Accueil</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Valls Administration Logo">
+        <img src="/static/img/valls_logo.png" alt="Logo d'Administraciones Valls">
       </div>
     </div>
     <div class="nav-btn">
@@ -30,59 +30,59 @@
       </label>
     </div>
     <div class="nav-links">
-      <a href="/en">Home</a>
-      <a href="/en/administracion-fincas">Property Management</a>
-      <a href="/en/gestion-alquileres">Rental Management</a>
-      <a href="/en/departamento-juridico">Legal Department</a>
-      <a href="/en/correduria-seguros">Insurance Brokerage</a>
-      <a href="/en/contacto">Contact</a>
+      <a href="/fr">Accueil</a>
+      <a href="/fr/administracion-fincas">Gestion de Propriété</a>
+      <a href="/fr/gestion-alquileres">Gestion Locative</a>
+      <a href="/fr/departamento-juridico">Département Juridique</a>
+      <a href="/fr/correduria-seguros">Courtage en Assurances</a>
+      <a href="/fr/contacto">Contact</a>
       <div class="select-box">
         <div class="select-box__current" tabindex="1">
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="es" value="es" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/es.svg" alt="Spanish" />
+              <img class="select-img" src="/static/img/es.svg" alt="Espagnol" />
             </p>
           </div>
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="en" value="en" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/gb.svg" alt="English" />
+              <img class="select-img" src="/static/img/gb.svg" alt="Anglais" />
             </p>
           </div>
           <div class="select-box__value">
             <input class="select-box__input" type="radio" id="de" value="de" name="lang" />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/de.svg" alt="German" />
+              <img class="select-img" src="/static/img/de.svg" alt="Allemand" />
             </p>
           </div>
           <div class="select-box__value">
-            <input class="select-box__input" type="radio" id="fr" value="fr" name="lang" />
+            <input class="select-box__input" type="radio" id="fr" value="fr" name="lang" checked />
             <p class="select-box__input-text">
-              <img class="select-img" src="/static/img/fr.svg" alt="French" />
+              <img class="select-img" src="/static/img/fr.svg" alt="Français" />
             </p>
           </div>
-          <img class="select-box__icon" src="/static/img/chevron_down.svg" alt="Arrow Icon" aria-hidden="true" />
+          <img class="select-box__icon" src="/static/img/chevron_down.svg" alt="Icône de flèche" aria-hidden="true" />
         </div>
         <ul class="select-box__list">
           <li>
             <label class="select-box__option" for="es" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/es.svg" alt="Spanish" />
+              <img class="select-img" src="/static/img/es.svg" alt="Espagnol" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="en" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/gb.svg" alt="English" />
+              <img class="select-img" src="/static/img/gb.svg" alt="Anglais" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="de" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/de.svg" alt="German" />
+              <img class="select-img" src="/static/img/de.svg" alt="Allemand" />
             </label>
           </li>
           <li>
             <label class="select-box__option" for="fr" aria-hidden="aria-hidden">
-              <img class="select-img" src="/static/img/fr.svg" alt="French" />
+              <img class="select-img" src="/static/img/fr.svg" alt="Français" />
             </label>
           </li>
         </ul>
@@ -92,10 +92,11 @@
   <main>
     <div class="main_container">
       <div class="main_text">
-        <h1>Valls Administration</h1>
+        <h1>Administrations Valls</h1>
         <div class="main_text_button"">
-          <a class=" button" target="_blank" href="https://www.idealista.com/en/pro/valls-inmobiliaria">FIND YOUR
-          HOME</a>
+          <a class=" button" target="_blank" href="https://www.idealista.com/pro/valls-inmobiliaria">
+          TROUVEZ VOTRE FOYER
+          </a>
         </div>
       </div>
     </div>
