--- a/html/de/gestion-alquileres.html
+++ b/html/de/gestion-alquileres.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/info.css">
-  <title>Valls Verwaltung | Vermietungsmanagement</title>
+  <title>Valls Immobilien | Vermietungsmanagement</title>
 </head>
 
 <body>
