--- a/html/fr/index.html
+++ b/html/fr/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/home.css">
-  <title>Administration Valls | Accueil</title>
+  <title>Valls Immobilier | Accueil</title>
 </head>
 
 <body>
@@ -92,7 +92,7 @@
   <main>
     <div class="main_container">
       <div class="main_text">
-        <h1>Administrations Valls</h1>
+        <h1>Valls Immobilier</h1>
         <div class="main_text_button"">
           <a class=" button" target="_blank" href="https://www.idealista.com/pro/valls-inmobiliaria">
           TROUVEZ VOTRE FOYER
