--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/home.css">
-  <title>Administraciones Valls | Inicio</title>
+  <title>Valls Inmobiliaria | Inicio</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Logo de Administraciones Valls">
+        <img src="/static/img/valls_logo.png" alt="Logo de Valls Inmobiliaria">
       </div>
     </div>
     <div class="nav-btn">
@@ -92,7 +92,7 @@
   <main>
     <div class="main_container">
       <div class="main_text">
-        <h1>Administraciones Valls</h1>
+        <h1>Valls Inmobiliaria</h1>
         <div class="main_text_button"">
           <a class=" button" target="_blank" href="https://www.idealista.com/pro/valls-inmobiliaria">
           ENCUENTRA TU HOGAR
