--- a/html/correduria-seguros.html
+++ b/html/correduria-seguros.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/info.css">
-  <title>Administraciones Valls | Correduría de Seguros</title>
+  <title>Valls Inmobiliaria | Correduría de Seguros</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Logo de Administraciones Valls">
+        <img src="/static/img/valls_logo.png" alt="Logo de Valls Inmobiliaria">
       </div>
     </div>
     <div class="nav-btn">
