--- a/html/en/contacto.html
+++ b/html/en/contacto.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/contact.css">
-  <title>Valls Administration | Contact</title>
+  <title>Valls Real Estate | Contact</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Valls Administration Logo">
+        <img src="/static/img/valls_logo.png" alt="Valls Real Estate Logo">
       </div>
     </div>
     <div class="nav-btn">
