--- a/html/en/correduria-seguros.html
+++ b/html/en/correduria-seguros.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/info.css">
-  <title>Valls Administration | Insurance Brokerage</title>
+  <title>Valls Real Estate | Insurance Brokerage</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Valls Administration Logo">
+        <img src="/static/img/valls_logo.png" alt="Valls Real Estate Logo">
       </div>
     </div>
     <div class="nav-btn">
