--- a/html/fr/administracion-fincas.html
+++ b/html/fr/administracion-fincas.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="/static/css/header.css">
   <link rel="stylesheet" type="text/css" href="/static/css/select-country.css">
   <link rel="stylesheet" type="text/css" href="/static/css/info.css">
-  <title>Administration Valls | Gestion de Propriété</title>
+  <title>Valls Immobilier | Gestion de Propriété</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="header_logo">
-        <img src="/static/img/valls_logo.png" alt="Logo de l'administration Valls">
+        <img src="/static/img/valls_logo.png" alt="Logo Valls Immobilier">
       </div>
     </div>
     <div class="nav-btn">
